grsec.archiso/airootfs/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Wed May 13 16:01:52 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:BLOCKED - [0:0]
:BRIDGE - [0:0]
:INTERNAL - [0:0]
:KNOCK_FOUR - [0:0]
:KNOCK_ONE - [0:0]
:KNOCK_THREE - [0:0]
:KNOCK_TWO - [0:0]
:LO - [0:0]
:SESSION - [0:0]
:TOR - [0:0]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j BLOCKED
-A INPUT -j KNOCK_ONE
-A INPUT -m recent --rcheck --seconds 60 --reap --name KNOCK_TWO --mask 255.255.255.255 --rsource -j KNOCK_TWO
-A INPUT -m recent --rcheck --seconds 60 --reap --name KNOCK_THREE --mask 255.255.255.255 --rsource -j KNOCK_THREE
-A INPUT -m recent --rcheck --seconds 60 --reap --name KNOCK_FOUR --mask 255.255.255.255 --rsource -j KNOCK_FOUR
-A INPUT -m recent --rcheck --seconds 60 --reap --name SESSION --mask 255.255.255.255 --rsource -j SESSION
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -m conntrack --ctstate NEW -j LO
-A INPUT -i bridge -m conntrack --ctstate NEW -j BRIDGE
-A INPUT -i internal -m conntrack --ctstate NEW -j INTERNAL
-A INPUT -i tor -m conntrack --ctstate NEW -j TOR
-A INPUT -j LOG --log-prefix DROPPED --log-level 6
-A INPUT -j DROP
-A FORWARD -i bridge -o tor -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A FORWARD -i bridge -o tor -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A FORWARD -i bridge -o internal -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A FORWARD -i bridge -o internal -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A FORWARD -i internal -o bridge -p udp -j ACCEPT
-A FORWARD -i internal -o bridge -p tcp -j ACCEPT
-A FORWARD -i tor -o bridge -p udp -j ACCEPT
-A FORWARD -i tor -o bridge -p tcp -j ACCEPT
-A FORWARD -j LOG --log-prefix FORWARD --log-level 6
-A BRIDGE -p tcp -m tcp --dport 31279 -j ACCEPT
-A BRIDGE -j LOG --log-prefix BRIDGE --log-level 6
-A BRIDGE -j DROP
-A INTERNAL -p udp -m udp --dport 53 -j ACCEPT
-A INTERNAL -p udp -m udp --dport 67 -j ACCEPT
-A INTERNAL -p tcp -m tcp --dport 8080 -j ACCEPT
-A INTERNAL -p tcp -m tcp --dport 12724 -j ACCEPT
-A INTERNAL -p tcp -m tcp --dport 12725 -j ACCEPT
-A INTERNAL -j LOG --log-prefix INTERNAL --log-level 6
-A INTERNAL -j DROP
-A KNOCK_FOUR -m recent --remove --name KNOCK_THREE --mask 255.255.255.255 --rsource
-A KNOCK_THREE -m recent --remove --name KNOCK_TWO --mask 255.255.255.255 --rsource
-A LO -d 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A LO -j LOG --log-prefix LO --log-level 6
-A LO -j DROP
-A SESSION -m recent --remove --name KNOCK_FOUR --mask 255.255.255.255 --rsource
-A TOR -p tcp -m tcp --dport 9050 -j ACCEPT
-A TOR -p udp -m udp --dport 9053 -j ACCEPT
-A TOR -j LOG --log-prefix TOR --log-level 6
-A TOR -j DROP
COMMIT
# Completed on Wed May 13 16:01:52 2015
# Generated by iptables-save v1.4.21 on Wed May 13 16:01:52 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i tor -p udp -j REDIRECT --to-ports 9053
-A PREROUTING -i tor -p tcp -j REDIRECT --to-ports 9050
-A POSTROUTING -o notbridge -j MASQUERADE
COMMIT
# Completed on Wed May 13 16:01:52 2015
# Generated by iptables-save v1.4.21 on Wed May 13 16:01:52 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed May 13 16:01:52 2015
# Generated by iptables-save v1.4.21 on Wed May 13 16:01:52 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed May 13 16:01:52 2015
# Generated by iptables-save v1.4.21 on Wed May 13 16:01:52 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed May 13 16:01:52 2015
